# DataScienceCookieCutter

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.devcontainer/: Dockerfile  container_config.sh  devcontainer.json
{{ cookiecutter.project_name }}/.github/scripts/: prepare_build_results.sh
{{ cookiecutter.project_name }}/.github/workflows/: build-package.yml
{{ cookiecutter.project_name }}/.hooks/: user_owned_branches_only.sh
{{ cookiecutter.project_name }}/conf/base/: globals.yml  logging.yml
{{ cookiecutter.project_name }}/conf/local/: globals.example.yml
{{ cookiecutter.project_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/: __main__.py  settings.py
