[tool.mypy]
exclude = [
    "tests", "tests/*"
]
ignore_missing_imports = "True"

[tool.black]
exclude = [
    "tests"
]

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["DS team"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.971"
mkdocs = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
