[tool.mypy]
exclude = [
    "src/tests",
    "src/tests/*",
    "docs/*",
    "src/imlp_data_processing/pipeline_registry.py"
]
ignore_missing_imports = "True"

[tool.black]
exclude = "src/tests/*"

[tool.isort]
skip_glob=["docs"]
profile = "black"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.authors }}"]

[tool.kedro]
package_name = "{{ cookiecutter.package_name }}"
project_name = "{{ cookiecutter.project_name }}"
project_version = "0.18.4"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
boto3 = "~1.24"
ipykernel = "^6.19.4"
fsspec = "^2022.11.0"
s3fs = "^2022.11.0"
python-dotenv = "^0.21.0"
openpyxl = "^3.0.10"
kedro = {extras = ["pandas"], version = "^0.18.4"}

[tool.poetry.dev-dependencies]
pytest = "~7.1.1"
flake8 = "~6.0.0"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.971"
mkdocs = "^1.3.1"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
